# embedding-explorer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: sample_texts.csv
embedding_explorer/: __init__.py  cli.py  core.py
embedding_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
